# rust-todo-web

./: Cargo.toml  README.md
src/: database.rs  main.rs  prelude.rs  routes.rs
static/: index.html
