[package]
name = "rust-todo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
dioxus = {version = "0.4.0", default-features = false, features = ["macro", "html"]}
dioxus-ssr = "0.4.0"
once_cell = "1.18.0"
serde = "1.0.188"
serde_json = "1.0.107"
sled = "0.34.7"
tokio = { version = "1.32.0", features = ["full"] }
